# amplihack-memory-lib

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  DUAL_BACKEND_IMPLEMENTATION.md  EXPLORATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  QUICK_REFERENCE.md  README.md  README_EXPLORATION.md  RELEASE_NOTES.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  verify_dual_backend.py
.claude/context/: PROJECT.md
.claude/runtime/: launcher_context.json
.github/workflows/: auto-tag.yml  ci.yml  docs.yml
api_reference/: index.html
architecture/: index.html
cognitive_memory/: index.html
docs/: api_reference.md  architecture.md  cognitive_memory.md  coordination_layer.md  extending.md  fact_lifecycle.md  hierarchical_memory.md  index.md  kuzu_backend.md
examples/: basic_usage.py  secure_memory_usage.py
extending/: index.html
fact_lifecycle/: index.html
hierarchical_memory/: index.html
kuzu_backend/: index.html
ladybug-graph-rs/: Cargo.toml
rust/amplihack-memory/: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
rust/amplihack-memory/benches/: memory_benchmarks.rs
rust/amplihack-memory/docs/: coordination_layer.md  csr_rel_delete_corruption.md  durability_and_recovery.md  exactly_once_and_bounded_recovery.md  lbug_0_17_upgrade.md  lbug_libstdcxx_abi.md  prospective_ordered_recall.md  ranked_recall.md  safe_node_deletion.md  similarity_linking.md
rust/amplihack-memory/src/: connector.rs  contradiction.rs  creative_idea.rs  distillation.rs  entity_extraction.rs  errors.rs  experience.rs  lib.rs  measurement.rs  memory_types.rs  pattern_recognition.rs  python_module.rs  security.rs  semantic_search.rs  similarity.rs  store.rs  utils.rs
rust/amplihack-memory/src/backends/: base.rs  kuzu_backend.rs  ladybug_backend.rs  mod.rs  sqlite_backend.rs
rust/amplihack-memory/src/backends/kuzu_backend/: mod.rs  search.rs  storage.rs  tests.rs
rust/amplihack-memory/src/backends/ladybug_backend/: mod.rs  search.rs  storage.rs  tests.rs
rust/amplihack-memory/src/backends/sqlite_backend/: mod.rs  search.rs  storage.rs  tests.rs
rust/amplihack-memory/src/cognitive_memory/: applied_ledger.rs  converters.rs  dedup.rs  episodic.rs  mod.rs  procedural.rs  prospective.rs  ranked.rs  semantic.rs  sensory.rs  similarity.rs  store_lock.rs  tests.rs  types.rs  working.rs  writer_lock.rs
rust/amplihack-memory/src/cognitive_memory/tests/: conformance_tests.rs  dedup_tests.rs  episodic_tests.rs  integration_tests.rs  mod.rs  persistent_tests.rs  procedural_tests.rs  prospective_tests.rs  ranked_perf_tests.rs  ranked_tests.rs  semantic_tests.rs  sensory_tests.rs  similarity_tests.rs  working_tests.rs
rust/amplihack-memory/src/connector/: mod.rs  operations.rs  tests.rs  tests_extended.rs
rust/amplihack-memory/src/coord/: applier.rs  intent_log.rs  ipc.rs  lease.rs  mod.rs  writer.rs
rust/amplihack-memory/src/graph/: federated_store.rs  hive_store.rs  in_memory_store.rs  kuzu_store.rs  mod.rs  protocol.rs  traversal.rs  types.rs
rust/amplihack-memory/src/graph/kuzu_store/: connection.rs  helpers.rs  mod.rs  queries.rs  schema.rs  tests.rs
rust/amplihack-memory/src/graph/lbug_store/: mod.rs  store_impl.rs  tests.rs
rust/amplihack-memory/src/graph/lbug_store/fixtures/v40_store/: graph.ladybug
rust/amplihack-memory/src/hierarchical_memory/: consolidation.rs  experience_ops.rs  helpers.rs  mod.rs  pattern_ops.rs  tests.rs  types.rs
rust/amplihack-memory/src/hierarchical_memory/tests/: consolidation_tests.rs  mod.rs  pattern_tests.rs  search_tests.rs  statistics_tests.rs  storage_tests.rs
rust/amplihack-memory/src/pattern_recognition/: detection.rs  mod.rs  scoring.rs  tests.rs  tests_extended.rs
rust/amplihack-memory/src/python/: cognitive.rs  connectors.rs  converters.rs  experience.rs  graph.rs  helpers.rs  hierarchical.rs  mod.rs  patterns.rs  search.rs  security.rs
rust/amplihack-memory/src/security/: credential_scrubber.rs  mod.rs  query_validator.rs  scope_enforcer.rs  tests.rs
rust/amplihack-memory/src/security/tests/: credential_scrubber_tests.rs  integration_tests.rs  mod.rs  query_validator_tests.rs  scope_enforcer_tests.rs
rust/amplihack-memory/tests/: applier_exactly_once.rs  concurrent.rs  coord_f1_append_recovery.rs  coord_f2_crash_injection.rs  coord_f2_exactly_once.rs  coord_f3_dir_fsync.rs  coord_f4_split_brain.rs  coord_f5_lease_atomicity.rs  coord_n1_scan_bound.rs  coord_n2_ledger_prune.rs  durable_log.rs  f1_torn_tail_quarantine.rs  f2_exactly_once_ledger.rs  f3_durable_append.rs  f4_single_writer_lock.rs  f5_atomic_lease_write.rs  ipc_transport.rs  issue40_prepare_context_profile.rs  lease_epoch_fencing.rs  multi_process_concurrent_append.rs  no_direct_open.rs  parity_test.rs  property_tests.rs  writer_client.rs
search/: search_index.json
specs/: DurableLog.cfg  DurableLog.tla  FederatedLoss.cfg  FederatedLoss.tla  FencedApplier.tla  FencedApplier_fenced.cfg  FencedApplier_unfenced.cfg  README.md  run-checks.sh
tests/: README.md  conftest.py  test_bounded_buffer_pool.py  test_cognitive_graph_edges.py  test_cognitive_memory.py  test_contradiction.py  test_entity_extraction.py  test_experience_model.py  test_experience_store.py  test_federated_graph.py  test_graph_store.py  test_hierarchical_memory.py  test_memory_connector.py  test_pattern_recognition.py  test_postgres_store.py  test_recall_quality_benchmark.py  test_security.py  test_semantic_search.py  test_similarity.py  test_tla_specs.py  test_vector_search.py
(+33 files in other folders)
