[package]
name = "amplihack-memory"
version = "0.4.0"
edition = "2021"
description = "Standalone memory system for goal-seeking agents"
license = "MIT"
rust-version = "1.80"
documentation = "https://docs.rs/amplihack-memory"
repository = "https://github.com/rysweet/amplihack-memory-lib"
readme = "README.md"
keywords = ["memory", "agents", "graph", "knowledge", "cognitive"]
categories = ["data-structures", "memory-management"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
ladybug-graph-rs = { path = "../../ladybug-graph-rs", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "memory_benchmarks"
harness = false

[features]
default = []
kuzu = ["dep:pyo3", "pyo3/auto-initialize"]
python = ["dep:pyo3", "pyo3/extension-module"]
ladybug = ["dep:ladybug-graph-rs"]

[dependencies.pyo3]
version = "0.22"
optional = true

[lib]
# cdylib is only needed when building the Python extension module.
# maturin adds it automatically; keeping just "lib" avoids unnecessary
# linker work for pure-Rust consumers.
crate-type = ["lib"]
